--- a/src/main/res/values/strings.xml
+++ b/src/main/res/values/strings.xml
@@ -1,5 +1,3 @@
 <resources>
-    <string name="app_name">My Application</string>
-    <string name="show_less">Show less</string>
-    <string name="show_more">Show more</string>
+    <string name="app_name">LayoutsCodelab</string>
 </resources>
